// Bun Snapshot v1, https://bun.sh/docs/test/snapshots

exports[`Phase 2 playback frames playing 140x40 1`] = `
" SpoTUI ·                                                                                                                                   
                                                                                                                              KEYS   THEME  
────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────
                                                                                                                                            
                                                                [QUEUE] [LYRICS] [INFO] [DEVICE]  / QUEUE                                   
                                                                Queue is empty. Press u to view or refresh it.                              
                                                                                                                                            
                                                                                                                                            
                                                                                                                                            
                                                                                                                                            
                                                                                                                                            
                                                                                                                                            
                                                                                                                                            
                                                                                   ▮ ▮     ▮ ▮ ▮ ▮ ▮ ▮     ▮ ▮ ▮                            
                                                                             ▮ ▮ ▮ ▮ ▮ ▮ ▮ ▮ ▮ ▮ ▮ ▮ ▮ ▮ ▮ ▮ ▮ ▮ ▮ ▮ ▮ ▮ ▮ ▮                
                                                                             ▮ ▮ ▮ ▮ ▮ ▮ ▮ ▮ ▮ ▮ ▮ ▮ ▮ ▮ ▮ ▮ ▮ ▮ ▮ ▮ ▮ ▮ ▮ ▮                
                                                                                   ▮ ▮     ▮ ▮ ▮ ▮ ▮ ▮     ▮ ▮ ▮                            
                         .----------.                                                                                                       
                      .-'////////////'-.                                                      Warm Receiver                                 
                    / //// //////// //// \\                                                                                                  
                   | /////////.///////// |                                             Signal Unit · Night Signals                          
                    \\ //// //////// //// /                                                                                                  
                      '-.////////////.-'                                                                                                    
                         '----------'                                                 ┌───┐ ┌───┐ ┌─────┐ ┌───┐ ┌───┐                       
                                                                                      │ ⇄ │ │|◀ │ │  Ⅱ  │ │▶| │ │ ↻ │                       
                                                                                      └───┘ └───┘ └─────┘ └───┘ └───┘                       
                                                                                                                                            
                                                                             1:04 ━━━━━━━━━━──────────────────────────── 4:00               
                                                                                                                                            
                                                                                                  ┌─┐ ┌─┐ ┌─┐ ┌───┐                         
                                                                                       VOLUME 68% │-│ │M│ │+│ │DEV│                         
                                                                                                  └─┘ └─┘ └─┘ └───┘                         
                                                                                                                                            
                                                                                                                                            
                                                                                                                                            
                                                                                                                                            
                                                                                                                                            
────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────
 device: Desk Speaker · / search · u queue · b library · d devices · q quit                                     ◆ FOCUS TRANSPORT / PLAYING 
                                                                                                                                            
"
`;

exports[`Phase 2 playback frames playing 110x30 1`] = `
" SpoTUI ·                                                                                                     
                                                                                                KEYS   THEME  
──────────────────────────────────────────────────────────────────────────────────────────────────────────────
                                                                                                              
                                                   [QUEUE] [LYRICS] [INFO] [DEVICE]  / QUEUE                  
                                                   Queue is empty. Press u to view or refresh it.             
                                                                                                              
                                                                                                              
                                                                                                              
                                                              ▮ ▮     ▮ ▮ ▮ ▮ ▮ ▮     ▮ ▮ ▮                   
                                                        ▮ ▮ ▮ ▮ ▮ ▮ ▮ ▮ ▮ ▮ ▮ ▮ ▮ ▮ ▮ ▮ ▮ ▮ ▮ ▮ ▮ ▮ ▮ ▮       
                                                        ▮ ▮ ▮ ▮ ▮ ▮ ▮ ▮ ▮ ▮ ▮ ▮ ▮ ▮ ▮ ▮ ▮ ▮ ▮ ▮ ▮ ▮ ▮ ▮       
                   .----------.                               ▮ ▮     ▮ ▮ ▮ ▮ ▮ ▮     ▮ ▮ ▮                   
                .-'////////////'-.                                                                            
              / //// //////// //// \\                                     Warm Receiver                        
             | /////////.///////// |                              Signal Unit · Night Signals                 
              \\ //// //////// //// /                                                                          
                '-.////////////.-'                              ┌───┐ ┌───┐ ┌─────┐ ┌───┐ ┌───┐               
                   '----------'                                 │ ⇄ │ │|◀ │ │  Ⅱ  │ │▶| │ │ ↻ │               
                                                                └───┘ └───┘ └─────┘ └───┘ └───┘               
                                                                                                              
                                                       1:04  ━━━━━━━━━━────────────────────────────4:00       
                                                                                                              
                                                                             ┌─┐ ┌─┐ ┌─┐ ┌───┐                
                                                                 VOLUME 68%  │-│ │M│ │+│ │DEV│                
                                                                             └─┘ └─┘ └─┘ └───┘                
                                                                                                              
──────────────────────────────────────────────────────────────────────────────────────────────────────────────
 device: Desk Speaker · / search · u queue · b library · d devices · q quit       ◆ FOCUS TRANSPORT / PLAYING 
                                                                                                              
"
`;

exports[`Phase 2 playback frames playing 90x26 1`] = `
" SpoTUI ·                                                                                 
                                                                            KEYS   THEME  
──────────────────────────────────────────────────────────────────────────────────────────
                                                                                          
                                    [QUEUE] [LYRICS] [INFO] [DEVICE]  / QUEUE             
                                    Queue is empty. Press u to view or refresh it.        
                                                                                          
                                                                                          
                                                 ▮ ▮ ▮     ▮ ▮ ▮ ▮ ▮                      
                                                 ▮ ▮ ▮     ▮ ▮ ▮ ▮ ▮                      
            .----------.                               Warm Receiver                      
         .-'////////////'-.                     Signal Unit · Night Signals               
       / //// //////// //// \\                                                             
      | /////////.///////// |                 ┌───┐ ┌───┐ ┌─────┐ ┌───┐ ┌───┐             
       \\ //// //////// //// /                 │ ⇄ │ │|◀ │ │  Ⅱ  │ │▶| │ │ ↻ │             
         '-.////////////.-'                   └───┘ └───┘ └─────┘ └───┘ └───┘             
            '----------'                                                                  
                                         1:04  ━━━━━━━━──────────────────────4:00         
                                                                                          
                                                           ┌─┐ ┌─┐ ┌─┐ ┌───┐              
                                               VOLUME 68%  │-│ │M│ │+│ │DEV│              
                                                           └─┘ └─┘ └─┘ └───┘              
                                                                                          
──────────────────────────────────────────────────────────────────────────────────────────
 / search · u queue · b library · d device                    ◆ FOCUS TRANSPORT / PLAYING 
                                                                                          
"
`;

exports[`Phase 2 playback frames playing 72x22 1`] = `
" SpoTUI ·                                                               
                                                          KEYS   THEME  
────────────────────────────────────────────────────────────────────────
                                                                        
  ( ///./// )                                                           
              COMPACT VINYL                                             
                                                                        
                             Warm Receiver                              
                      Signal Unit · Night Signals                       
                                                                        
                     ┌───┐ ┌───┐ ┌─────┐ ┌───┐ ┌───┐                    
                     │ ⇄ │ │|◀ │ │  Ⅱ  │ │▶| │ │ ↻ │                    
                     └───┘ └───┘ └─────┘ └───┘ └───┘                    
            1:04 ━━━━━━━━━━──────────────────────────── 4:00            
                                 ┌─┐ ┌─┐ ┌─┐ ┌───┐                      
                      VOLUME 68% │-│ │M│ │+│ │DEV│                      
                                 └─┘ └─┘ └─┘ └───┘                      
  Queue is empty. Press u to view or refresh it.                        
                                                                        
────────────────────────────────────────────────────────────────────────
 / FIND  U QUEUE  B LIB                     ◆ FOCUS TRANSPORT / PLAYING 
                                                                        
"
`;

exports[`Phase 2 playback frames playing 52x16 1`] = `
" SpoTUI ·                                           
                                      KEYS   THEME  
────────────────────────────────────────────────────
 ( ///./// ) COMPACT VINYL                          
                   Warm Receiver                    
             ┌───┐┌───┐┌─────┐┌───┐┌───┐            
             │ ⇄ ││|◀ ││  Ⅱ  ││▶| ││ ↻ │            
             └───┘└───┘└─────┘└───┘└───┘            
    1:04 ━━━━━━━━━───────────────────────── 4:00    
                        ┌─┐┌─┐┌─┐┌─┐                
                VOL 68% │-││M││+││D│                
                        └─┘└─┘└─┘└─┘                
  Queue is empty. Press u to view or refresh it.    
────────────────────────────────────────────────────
 / FIND  U QUEUE  B LIB ◆ FOCUS TRANSPORT / PLAYING 
                                                    
"
`;

exports[`Phase 2 playback frames no-device 1`] = `
" SpoTUI ·                                                                                 
                                                                            KEYS   THEME  
──────────────────────────────────────────────────────────────────────────────────────────
                                                                                          
                                     NOTICE                                               
                                     Open Spotify on a device, or choose an available     
                                     device.                                              
                                                                                          
                                                                                          
                                                                                          
            .----------.                                                                  
         .-'////////////'-.                                                               
       / //// //////// //// \\                        NO ACTIVE DEVICE                     
      | /////////.///////// |                                                             
       \\ //// //////// //// /         Open Spotify somewhere, or press d to choose a      
         '-.////////////.-'           device.                                             
            '----------'                                                                  
                                                   1 available device(s)                  
                                                                                          
                                                                                          
                                                                                          
                                                                                          
                                                                                          
──────────────────────────────────────────────────────────────────────────────────────────
 / search · u queue · b library · d device                  ◆ FOCUS TRANSPORT / NO DEVICE 
                                                                                          
"
`;
